--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -2,7 +2,7 @@
 $govuk-global-styles: true;
 
 // We can't mount GOV.UK Frontend's assets at root as it's done automatically by the extensions framework.
-$govuk-assets-path: '/govuk/assets/';
+$govuk-assets-path: "/govuk/assets/";
 
 // Get into teaching
 $git-brand-colour: #159964;
@@ -11,463 +11,24 @@ $git-brand-colour: #159964;
 @import "lib/extensions/extensions";
 
 // Add extra styles here, or re-organise the Sass files in whichever way makes most sense to you
-@import "patterns/simplemde-theme";
-@import "patterns/success-summary";
-@import "patterns/destructive-button";
 @import "components/advice";
+@import "components/application-card";
+@import "components/copy-content";
+@import "components/course-tabs";
 @import "components/description-list";
+@import "components/header";
 @import "components/list";
 @import "components/map";
-@import "components/application-card";
-
-// Utilities
-@import "utilities/overrides";
-
-blockquote {
-  margin: 0;
-}
-
-.multiple-choice [type=checkbox] + label::before {
-  background: #fff;
-}
-
-.not-running-notice {
-  border: 5px solid govuk-colour("light-grey");
-  padding: 20px;
-}
-
-#proposition-links {
-  color: govuk-colour("white");
-  font-weight: bold;
-}
-
-table thead th {
-  border-bottom-width: 2px;
-  border-color: govuk-colour("black");
-}
-
-.table-small {
-  th {
-    @include govuk-font(16, $weight: bold);
-  }
-
-  td {
-    @include govuk-font(16);
-  }
-}
-
-.phase-tag-small {
-  padding: 4px 8px 1px;
-}
-
-.phase-tag-no-content {
-  background: govuk-colour("white");
-  color: govuk-colour("dark-grey");
-  border: 2px solid lighten(govuk-colour("dark-grey"), 10%);
-  margin-top: -1px;
-  margin-bottom: -1px;
-}
-
-.phase-tag-not-running {
-  background: govuk-colour("light-grey");
-  color: govuk-colour("black");
-  margin-top: -1px;
-  margin-bottom: -1px;
-}
-
-.phase-tag-draft {
-  background: govuk-colour("orange");
-}
-
-.phase-tag-published {
-  background: govuk-colour("green");
-}
-
-.status {
-  background: govuk-colour("light-grey");
-  padding: 20px;
-}
+@import "components/phase-tag";
+@import "components/summary-list";
+@import "components/timeline";
 
 .status-box {
   background-color: govuk-colour("light-grey");
-  padding: 20px;
-}
-
-.who-saved {
-  @include govuk-font(16);
-}
-
-.doc-image {
-  max-width: 100%;
-  border: 1px solid $govuk-border-colour;
-  margin-bottom: $govuk-gutter * 2;
-}
-
-.remove-top-margin {
-  margin-top: 0;
-}
-
-.remove-bottom-margin {
-  margin-bottom: 0;
-}
-
-.add-double-bottom-margin {
-  margin-bottom: $govuk-gutter;
-}
-
-.add-top-margin {
-  margin-top: $govuk-gutter / 2;
-}
-
-.form-control-small {
-  width: 200px;
-}
-
-.fake-email {
-  margin-left: 15px;
-  margin-top: 20px;
-  border: 5px solid $govuk-border-colour;
-  padding: 60px;
+  padding: govuk-spacing(4);
 }
 
 .missing-section {
-  border: 5px solid $govuk-border-colour;
-  padding: $govuk-gutter / 2;
-}
-
-.preview-pre {
-  white-space: pre-wrap;
-}
-
-.no-wrap,
-.nowrap {
-  white-space: nowrap;
-}
-
-.textarea-wrapper {
-  position: relative;
-
-  .custom-toolbar {
-    text-align: right;
-    width: 320px;
-    position: absolute;
-    right: 12px;
-    top: 12px;
-    z-index: 2;
-
-    label {
-      @include govuk-font(16);
-      display: inline;
-      margin-right: 5px;
-    }
-
-    select {
-      @include govuk-font(16);
-      width: 220px;
-    }
-  }
-}
-
-.autocomplete__menu {
-  @include govuk-font(19);
-}
-
-.markdown ul {
-  @extend .govuk-list;
-  @extend .govuk-list--bullet;
-}
-
-// Optional value is empty
-.govuk-summary-list__row--empty {
-  .govuk-summary-list__value {
-    color: govuk-colour("dark-grey");
-  }
-}
-
-// Required value is missing
-.govuk-summary-list__row--missing {
-  .govuk-summary-list__value {
-    color: govuk-colour("dark-grey");
-  }
-
-  .govuk-summary-list__key {
-    border-left: $govuk-border-width solid govuk-colour("blue");
-    padding-left: govuk-spacing(2);
-  }
-}
-
-// Required value is missing and validated
-.govuk-summary-list__row--error {
-  .govuk-summary-list__key {
-    border-left: $govuk-border-width solid govuk-colour("red");
-    padding-left: govuk-spacing(2);
-  }
-
-  .govuk-summary-list__value a {
-    @include govuk-typography-weight-bold;
-    @include govuk-link-common;
-    @include govuk-link-style-error;
-  }
-}
-
-.govuk-summary-list__value--truncate {
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  max-width: 295px;
-}
-
-.truncate {
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  max-width: 100%;
-  display: inline-block;
-  margin-bottom: -8px;
-}
-
-.interruption-card {
-  background: $govuk-brand-colour;
-  padding: govuk-spacing(7) govuk-spacing(6) govuk-spacing(2);
-
-  p, h1, h2, h3, ul, a:visited, a:link  {
-    color: govuk-colour("white");
-  }
-
-  .govuk-button {
-    background: govuk-colour("white");
-    color: $govuk-brand-colour !important;
-    font-weight: bold;
-  }
-}
-
-.location-list {
-  margin-bottom: govuk-spacing(8);
-}
-
-.location-list li {
-  border-bottom: 1px solid $govuk-border-colour;
-  padding-top: govuk-spacing(2);
-  padding-bottom: govuk-spacing(2);
-
-  &:last-child {
-    border: none;
-  }
-}
-
-.course-tabs {
-  .govuk-tabs__tab {
-    font-weight: bold;
-    color: $govuk-link-colour;
-    text-align: left;
-    text-decoration: none;
-  }
-
-  .govuk-tabs__tab--selected,
-  .govuk-tabs__list-item--selected {
-    color: $govuk-text-colour;
-    background-color: govuk-colour('white');
-    border-top: 5px solid govuk-colour('blue');
-    padding-top: govuk-spacing(3) - 5;
-
-    a {
-      outline-offset: -3px;
-    }
-  }
-
-  .govuk-tabs__panel {
-    border: none;
-    padding: 30px 0 0;
-  }
-}
-
-.timeline {
-  padding-left: 0;
-  list-style-type: none;
-
-  .edition-timeline {
-    padding-left: 0;
-    list-style-type: none;
-  }
-
-  .timeline-day-wrapper {
-    border-left: 5px solid govuk-colour("mid-grey");
-    position: relative;
-    margin-top: 10px;
-  }
-
-  .timeline-day {
-    margin-bottom: 40px;
-    padding-left: 30px;
-    position: relative;
-    top: -10px;
-
-    &:before {
-      content: " ";
-      height: 5px;
-      width: 15px;
-      background: govuk-colour("mid-grey");
-      display: inline-block;
-      position: absolute;
-      top: 10px;
-      left: 0;
-    }
-  }
-
-  .events {
-    padding-left: 0;
-    list-style-type: none;
-  }
-
-  .event {
-    margin-bottom: 20px;
-    &:last-child {
-      margin-bottom: 0;
-    }
-    h4 {
-      margin-bottom: 0;
-    }
-  }
-
-  .metadata {
-    color: $govuk-secondary-text-colour;
-    display: inline-block;
-    margin-bottom: 5px;
-  }
-}
-
-.error .govuk-warning-text__icon {
-  background-color: $govuk-error-colour;
-  border-color: $govuk-error-colour;
-}
-
-.dm-alert {
-  @include govuk-responsive-padding(4);
-  @include govuk-responsive-margin(8, "bottom");
-  border: govuk-spacing(1) solid;
-}
-.dm-alert--success {
-  border-color: govuk-colour("green");
-}
-.dm-alert--error {
-  border-color: $govuk-error-colour;
-}
-.dm-alert--notice {
-  border-color: govuk-colour("blue");
-}
-.dm-alert__title {
-  @include govuk-font(19, $weight: bold);
-  margin: 0px;
-}
-.dm-alert__title--large {
-  @include govuk-font(24, $weight: bold);
-}
-.dm-alert__body {
-  @include govuk-font(19);
-  @include govuk-responsive-padding(4,"top");
-  @include govuk-responsive-padding(0,"bottom");
-}
-
-.govuk-header__new {
-  font-size: 0; // Removes white space when using inline-block on child element.
-  list-style: none;
-  margin: 0;
-  padding: 0;
-
-  .dm-admin-header {
-    .govuk-header__container {
-      border-bottom-color: govuk-colour("red");
-    }
-  }
-
-  .govuk-header__logo {
-    width: 100%;
-
-    @include govuk-media-query($from: 1000px) {
-      width: auto;
-    }
-
-    // @media (min-width: 1000px) {
-    //   width: auto;
-    // }
-  }
-
-  .govuk-header__logotype-text {
-    font-size: 1.5rem;
-    line-height: 1.25;
-    font-weight: 700;
-  }
-
-  .govuk-header__content {
-    text-align: left;
-
-    @include govuk-media-query($from: 1000px) {
-      width: auto;
-      float: none;
-      text-align: right;
-    }
-
-  }
-
-  .govuk-header__navigation-item {
-    display: inline-block;
-    margin-right: govuk-spacing(4);
-
-    &:last-child {
-      margin-right: 0;
-    }
-
-    a {
-      @include govuk-font(19);
-      text-decoration: underline;
-    }
-
-    a:hover {
-      text-decoration: none;
-    }
-
-  }
-
-  .govuk-header__navigation-item--active {
-    a {
-      font-weight: 700;
-      border: none;
-      text-decoration: none;
-    }
-
-    a:hover {
-      text-decoration: none;
-    }
-  }
-
-  .govuk-header__link {
-    font-weight: normal;
-
-    &:link,
-    &:visited,
-    &:active {
-      color: inherit;
-    }
-
-    &:focus {
-      color: govuk-colour("black");
-    }
-
-  }
-
-  .govuk-header__logotype-text {
-    text-decoration: none;
-  }
-
-}
-
-.govuk-header {
-  .govuk-header__logo {
-    width: auto !important;
-  }
-
-  .govuk-header__content {
-    width: auto !important;
-    float: right;
-  }
+  border: $govuk-border-width solid $govuk-border-colour;
+  padding: govuk-spacing(4);
 }
