--- a/app/views/about-your-organisation/about.html
+++ b/app/views/about-your-organisation/about.html
@@ -88,7 +88,7 @@
       </div>
 
       <div class="govuk-grid-column-one-third">
-        <div class="add-double-bottom-margin status-box">
+        <div class="status-box govuk-!-margin-bottom-6">
           {{ macros.formatting() }}
         </div>
       </div>
