--- a/app/views/course/degree-subject.html
+++ b/app/views/course/degree-subject.html
@@ -52,9 +52,9 @@
           ]
         }) }}
 
-        <div class="add-double-bottom-margin">
-          <input type="submit" class="govuk-button" value="Save" />
-        </div>
+        {{ govukButton({
+          text: "Save"
+        }) }}
       </form>
     </div>
   </div>
