--- a/app/views/course/gcses-pending-or-equivalency-tests.html
+++ b/app/views/course/gcses-pending-or-equivalency-tests.html
@@ -130,9 +130,9 @@
           }) }}
         {% endif %}
 
-        <div class="add-double-bottom-margin">
-          <input type="submit" class="govuk-button" value="Save" />
-        </div>
+        {{ govukButton({
+          text: "Save"
+        }) }}
       </form>
     </div>
   </div>
