--- a/app/views/onboarding/code.html
+++ b/app/views/onboarding/code.html
@@ -10,7 +10,7 @@
       </h1>
 
       <p>We’ve generated a unique code for your organisation:</p>
-      <div class="govuk-inset-text add-double-bottom-margin">
+      <div class="govuk-inset-text govuk-!-margin-bottom-6">
         <p class="govuk-heading-l">
           {{ data['provider-code'] }}
         </p>
