--- a/app/views/onboarding/contact.html
+++ b/app/views/onboarding/contact.html
@@ -22,7 +22,7 @@
 
         {{ macros.textbox('organisation-town-or-city', 'Town or city', null, 'form-control', null, errors) }}
         {{ macros.textbox('county', 'County', null, 'form-control', null, errors) }}
-        {{ macros.textbox('postcode', 'Postcode', null, 'form-control-small', null, errors) }}
+        {{ macros.textbox('postcode', 'Postcode', null, 'govuk-input--width-10', null, errors) }}
 
         {{ macros.select('provider-ucas-region', 'Region of UK', [
           { name: 'London' },
