--- a/app/views/onboarding/location.html
+++ b/app/views/onboarding/location.html
@@ -23,7 +23,7 @@
           {{ macros.textbox(code + '-address', 'Building and street', null, 'govuk-!-width-full', null, errors) }}
           {{ macros.textbox(code + '-town', 'Town or city', null, 'form-control', null, errors) }}
           {{ macros.textbox(code + '-county', 'County', null, 'form-control', null, errors) }}
-          {{ macros.textbox(code + '-postcode', 'Postcode', null, 'form-control-small', null, errors) }}
+          {{ macros.textbox(code + '-postcode', 'Postcode', null, 'govuk-input--width-10', null, errors) }}
 
           {{ macros.select(code + '-ucas-region', 'Region of UK', [
             { name: 'London' },
