--- a/app/views/onboarding/name.html
+++ b/app/views/onboarding/name.html
@@ -12,7 +12,7 @@
 
       <!-- <p>From your request for allocations we’ve got this name:</p> -->
       <p>You’re listed under this name:</p>
-      <div class="govuk-inset-text add-double-bottom-margin">
+      <div class="govuk-inset-text govuk-!-margin-bottom-6">
         <p class="govuk-body-l">
           {{ originalName }}
         </p>
