--- a/app/views/organisations/index.html
+++ b/app/views/organisations/index.html
@@ -11,19 +11,19 @@
 
       <ul class="govuk-list">
         <li>
-          <h2 class="govuk-heading-m remove-top-margin remove-bottom-margin">
+          <h2 class="govuk-heading-m govuk-!-margin-top-0 govuk-!-margin-bottom-0">
             <a href="/courses">{{ data['training-provider-name']}}</a>
           </h2>
           <p>{{ data['ucasCourses'].length }} courses</p>
         </li>
         <!-- <li>
-          <h2 class="govuk-heading-m remove-top-margin remove-bottom-margin">
+          <h2 class="govuk-heading-m govuk-!-margin-top-0 govuk-!-margin-bottom-0">
             <a href="/courses">Astra SCITT</a>
           </h2>
           <p>24 courses</p>
         </li> -->
         <li>
-          <h2 class="govuk-heading-m remove-top-margin remove-bottom-margin">
+          <h2 class="govuk-heading-m govuk-!-margin-top-0 govuk-!-margin-bottom-0">
             <a href="/courses">Dr Challoner’s Grammar School</a>
           </h2>
           <p>12 courses</p>
