--- a/app/views/ucas/admin.html
+++ b/app/views/ucas/admin.html
@@ -11,7 +11,7 @@
     {{ title }}
   </h1>
 
-  <div class="govuk-grid-row add-top-margin">
+  <div class="govuk-grid-row govuk-!-margin-top-3">
     <div class="govuk-grid-column-two-thirds">
       <form action="/ucas/apply-preferences" method="post">
         <p>This person is responsible for creating and maintaining UCAS user&nbsp;accounts.</p>
@@ -25,12 +25,11 @@
         {{ macros.textbox('ucas-admin-telephone', 'Telephone number', false, 'govuk-input--width-10') }}
         {{ macros.checkboxGroup('agree-to-share', [{ name: 'I give permission to share this information with UCAS' }], false) }}
 
-        <div class="form-group add-double-bottom-margin">
-          <input type="submit" class="govuk-button" value="Request changes">
-        </div>
-        <p>
-          <a href="/ucas/apply-preferences">Cancel changes</a>
-        </p>
+        {{ govukButton({
+          text: "Request changes"
+        }) }}
+
+        <p><a href="/ucas/apply-preferences">Cancel changes</a></p>
       </form>
     </div>
   </div>
