--- a/app/views/courses/index.html
+++ b/app/views/courses/index.html
@@ -9,24 +9,18 @@
 {% endblock %}
 
 {% block content %}
-  {% if justEditedVacancies %}
-    <div class="success-summary" role="alert" aria-labelledby="success-summary-heading-example-1" tabindex="-1">
-      <h3 class="govuk-heading-m govuk-!-margin-bottom-0 success-summary-heading" id="success-summary-heading-example-1">
-        Course vacancies published
-      </h3>
-    </div>
-  {% endif %}
+  {{ govukNotificationBanner({
+    text: "Course vacancies published.",
+    type: "success"
+  }) if justEditedVacancies }}
 
-  {% if justDeleted %}
-    <div class="success-summary" role="alert" aria-labelledby="success-summary-heading-example-1" tabindex="-1">
-      <h3 class="govuk-heading-m govuk-!-margin-bottom-0 success-summary-heading" id="success-summary-heading-example-1">
-        Course deleted
-      </h3>
-    </div>
-  {% endif %}
+  {{ govukNotificationBanner({
+    text: "Course deleted.",
+    type: "success"
+  }) if justDeleted }}
 
   <h1 class="govuk-heading-xl">
-    {% if data['next-cycle'] %}<span class="govuk-caption-xl">Next cycle (2022 to  2023)</span>{% endif %}
+    {% if data["next-cycle"] %}<span class="govuk-caption-xl">Next cycle (2022 to  2023)</span>{% endif %}
     {{ title }}
   </h1>
 
@@ -39,7 +33,7 @@
   </ul>
 
   {% if data['ucasCourses'].length > 10 %}
-    <div class="add-top-margin">
+    <div class="govuk-!-margin-top-3">
       <a href="{{ newCourseFormUrl }}" class="govuk-button" target="_blank">Add a new course</a>
     </div>
   {% endif %}
@@ -77,7 +71,7 @@
     {% endfor %}
   {% endif %}
 
-  <div class="add-top-margin">
+  <div class="govuk-!-margin-top-3">
     <a href="{{ newCourseFormUrl }}" class="govuk-button" target="_blank">Add a new course</a>
   </div>
 
