--- a/app/views/new-location/_answers.html
+++ b/app/views/new-location/_answers.html
@@ -31,7 +31,7 @@
     </dt>
     <dd class="govuk-summary-list__value">
       {% if data[code + '-area-school-names'] %}
-        <ul class="govuk-list remove-bottom-margin">
+        <ul class="govuk-list govuk-!-margin-bottom-0">
           {% if isArray(data[code + '-area-school-names']) %}
             {% for school in data[code + '-area-school-names'] %}
               <li>{{ school }}</li>
