--- a/app/views/new-location/address.html
+++ b/app/views/new-location/address.html
@@ -10,8 +10,8 @@
     <div class="govuk-grid-column-two-thirds">
       <form action="{{ paths.next }}" method="post">
 
-        <div class="govuk-inset-text remove-top-margin">
-          <h2 class="govuk-heading-m remove-top-margin">{{ location.name }}</h2>
+        <div class="govuk-inset-text govuk-!-margin-top-0">
+          <h2 class="govuk-heading-m govuk-!-margin-top-0">{{ location.name }}</h2>
           <p>
             {{ location.address }}<br />
             {{ (location.town + '<br />' if location.town) | safe }}
@@ -32,7 +32,7 @@
           {{ macros.textbox(code + '-address', 'Building and street', null, 'govuk-!-width-full', null, errors, location.address) }}
           {{ macros.textbox(code + '-town', 'Town or city', null, 'form-control', null, errors, location.town) }}
           {{ macros.textbox(code + '-county', 'County', null, 'form-control', null, errors, location.county) }}
-          {{ macros.textbox(code + '-postcode', 'Postcode', null, 'form-control-small', null, errors, location.postcode) }}
+          {{ macros.textbox(code + '-postcode', 'Postcode', null, 'govuk-input--width-10', null, errors, location.postcode) }}
 
           {{ macros.textbox(code + '-url', '<h2 class="govuk-heading-m govuk-!-padding-top-4">Website</h2>', null, 'govuk-!-width-full', null, errors, location.url) }}
         {% endset %}
