--- a/app/views/new-location/confirm.html
+++ b/app/views/new-location/confirm.html
@@ -5,7 +5,7 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <h1 class="govuk-heading-xl add-double-bottom-margin">
+      <h1 class="govuk-heading-xl govuk-!-margin-bottom-6">
         {{ title }}
       </h1>
 
