--- a/app/views/new-location/edit.html
+++ b/app/views/new-location/edit.html
@@ -10,7 +10,7 @@
   <form action="{{ paths.next }}" method="post">
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
-        <h1 class="govuk-heading-xl add-double-bottom-margin">
+        <h1 class="govuk-heading-xl govuk-!-margin-bottom-6">
           {{ title }}
         </h1>
 
