--- a/app/views/new/editing-title.html
+++ b/app/views/new/editing-title.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <p>Your requested and approved title:</p>
-      <div class="govuk-inset-text add-double-bottom-margin">
+      <div class="govuk-inset-text govuk-!-margin-bottom-6">
         <p class="govuk-heading-m govuk-!-margin-bottom-2">
           {{ generatedTitle }}
         </p>
@@ -68,7 +68,9 @@
           }
         ], errors) }}
 
-        <input type="submit" class="govuk-button" value="Continue" />
+        {{ govukButton({
+          text: "Continue"
+        }) }}
       </form>
     </div>
   </div>
